
Wed Jan 31 17:35:59  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in: Increment VERSION to 0.5
	* include/winnt.h: Change TEXT to _TEXT throughout.
	(SID_RELEASE): Define.
	Thanks to: Eric PAIRE <eric.paire@ri.silicomp.com>

Tue Jan 30 10:42:28  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Phil Krylov patches.
	2001-01-19  Phil Krylov  <phil@mail.ru>
	* include/commctrl.h: (HDI_IMAGE) New definition.
	(HDI_DI_SETITEM) Ditto.
	(HDI_ORDER) Ditto.
	(HDI_FILTER) Ditto.
	(HDF_BITMAP_ON_RIGHT) Ditto.
	(HDF_IMAGE) Ditto.
	(HDM_SETORDERARRAY) Ditto.
	(Header_SetOrderArray) Ditto.
	(ICC_BAR_CLASSES) Ditto.
	(struct _HD_ITEMA) Change definition.
	(struct _HD_ITEMW) Ditto.
	(struct tagINITCOMMONCONTROLSEX) Enclose in _WIN32_IE braces.
	(InitCommonControlsEx()) Ditto.
	2001-01-23  Phil Krylov  <phil@mail.ru>
	* include/richedit.h: Many Richedit 2.0 definitions.

Tue Jan 30 09:56:50  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/winuser.h: (IDC_HAND)  New resource identifier.
	Thanks to: Mark Jordon <mark_jordan@ieee.org>

Tue Jan 30 09:35:30  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/iptypes.h: Include <sys/types.h> for time_t declaration.
	Fix typo's.

Tue Jan 30 08:30:33  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/objidl.h: (GetClassID): Argument needs to be a pointer.
	(GetUnmarshalClass): CLSID argument needs to be a pointer.
	Thanks To: <bge@users.sourceforge.net>

Tue Jan 30 07:52:54  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Danny Smith patch 102386
	2000-11-15  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* lib/rasapi32.def: add symbols available in NT4 and W2k

Sun Jan 28 12:47:31  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Danny Smith patch 102382
	2000-11-15  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* lib/mswsock.def: remove leading underscores from symbol names

Sun Jan 28 11:16:39  2001  Earnie Boyd  <earnie@users.sourceforge.net>
